test_data/ingress-with-service.json
{
  "apiVersion": "admission.k8s.io/v1",
  "kind": "AdmissionReview",
  "request": {
    "uid": "1299d386-525b-4032-98ae-1949f69f9cfc",
    "kind": {
      "group": "networking.k8s.io",
      "kind": "Ingress",
      "version": "v1"
    },
    "resource": {
      "group": "networking.k8s.io",
      "version": "v1",
      "resource": "ingresses"
    },
    "operation": "CREATE",
    "requestKind": {
      "group": "networking.k8s.io",
      "version": "v1",
      "kind": "Ingress"
    },
    "userInfo": {
      "username": "alice",
      "uid": "alice-uid",
      "groups": [
        "system:authenticated"
      ]
    },
    "object": {
      "apiVersion": "networking.k8s.io/v1",
      "kind": "Ingress",
      "metadata": {
        "name": "ingress-with-service",
        "namespace": "default"
      },
      "spec": {
        "defaultBackend": {
          "service": {
            "name": "my-service",
            "port": {
              "number": 80
            }
          }
        }
      }
    }
  }
}
