test_data/replay-session-no-service.yml
- type: Exchange
  request: |
    !KubernetesGetResource
    api_version: v1
    kind: Service
    name: non-existent-service
    namespace: default
    disable_cache: false
  response:
    type: Error
    message: Cannot find v1/Service named 'non-existent-service' inside of namespace 'Some("default")'
