test_data/service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: default
spec:
  selector:
    app: app-a
  ports:
    - port: 80
      targetPort: 8080
