test_data/service-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: default
spec:
  selector:
    app: app-b
  ports:
    - port: 80
      targetPort: 8080
